--- a/todo-site/package.json
+++ b/todo-site/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/uuid": "^8.3.4",
     "next": "12.2.5",
+    "oidc-client-ts": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-oidc-context": "^3.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
